[tool.poetry]
name = "python-fortnox-client"
version = "0.1.0"
description = ""
authors = ["Joaqim Planstedt <git@joaqim.xyz>"]
readme = "README.md"
packages = [{include = "fortnoxclient"}]

[tool.poetry.dependencies]
python = "^3.10"
pymongo = "^4.3.3"
fire = "^0.5.0"
requests = "^2.28.2"
python-dotenv = "^1.0.0"
ratelimit = "^2.2.1"
python-dateutil = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
